--- a/widget/index.html
+++ b/widget/index.html
@@ -19,6 +19,8 @@
 	<!-- JS -->
 	<script src="../../../scripts/buildfire.js"></script>
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
+
+
     <script src="../../../scripts/angular/angular.min.js"></script>
     <script src="../../../scripts/angular/ng-infinite-scroll.min.js"></script>
 
@@ -47,7 +49,7 @@
     <style>
         body {
             margin: 0;
-            background: #333;
+            background: #333 !important;
             color:white;
         }
 
