--- a/control/content/index.html
+++ b/control/content/index.html
@@ -2,30 +2,44 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../../../../scripts/buildfire.js"></script>
 
-    <!--
-		NOTE:
-		1. You can reference the file in SDK via relative path
-		2. The Control and Widget Should NOT share resources. They will be separated in production.
-		3. You may include any JS framework you want with your Widget and Control folders. However, keep in mind
-		    to keep you plugin as light weight as possible for performance and transport reasons
-	-->
-
-    <!-- You can load helper.css to use our helper classes.
-    <link href="../../../../styles/helper.css" rel="stylesheet">
-    -->
-	
-	<!-- JS -->
-	<script src="../../../../scripts/buildfire.js"></script>
-   
- 	<!--
-    <script src="../../../../scripts/angular/angular.min.js"></script>
-    <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
-
-   <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
-   -->
 </head>
 <body>
-<span>Content - Hello world!</span>
+    <div class="content">
+        <div class="form-group">
+            <div class="item clearfix row">
+                <div class="labels col-md-3 padding-right-zero pull-left">
+                    <span>Auction Id</span>
+                </div>
+                <div class="main col-md-9 pull-right">
+                    <input id="auctionId" type="text" class="form-control" onchange="save()"  >
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script>
+        var auctionId = document.getElementById('auctionId');
+        function loadData(){
+            buildfire.datastore.get( function(err, obj){
+                if(err)
+                    console.error(err);
+                else if (obj.data) {
+
+                    auctionId.value = obj.data.auctionId || '';
+                }
+            });
+        }
+        loadData();
+
+        function save(){
+            buildfire.datastore.save({auctionId: auctionId.value} , function(err){
+                if(err)
+                    console.error(err);
+            });
+        }
+    </script>
 </body>
 </html>
