--- a/widget/index.html
+++ b/widget/index.html
@@ -55,7 +55,7 @@
         }
 
         header {
-            padding: .5vw;
+            /*padding: .5vw;*/
             font-size: 0;
             display: -ms-flexbox;
             -ms-flex-wrap: wrap;
@@ -66,11 +66,19 @@
             display: flex;
         }
 
-        header div {
+        header div{
             -webkit-box-flex: auto;
             -ms-flex: auto;
             flex: auto;
-            width: 200px;
+            width: 33vw;
+            margin: .5vw;
+        }
+
+        header div:nth-child(4n) {
+            -webkit-box-flex: auto;
+            -ms-flex: auto;
+            flex: auto;
+            width: 100vw;
             margin: .5vw;
         }
 
